--- a/ChattingApp/app/src/main/res/drawable-v24/chat_box.xml
+++ b/ChattingApp/app/src/main/res/drawable-v24/chat_box.xml
@@ -3,5 +3,5 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="@color/main_blue"/>
+    <solid android:color="@color/navy"/>
 </shape>
