--- a/ChattingApp/app/src/main/res/drawable-v24/chat_text.xml
+++ b/ChattingApp/app/src/main/res/drawable-v24/chat_text.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius = "50dp"/>
-    <stroke android:color="@color/main_blue"
+    <stroke android:color="@color/navy"
         android:width="2dp"/>
 
 </shape>
