--- a/ChattingApp/app/src/main/res/layout/activity_chat.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_chat.xml
@@ -50,7 +50,7 @@
                     android:gravity="center"
                     android:paddingVertical="12dp"
                     android:text="회사 A"
-                    android:textColor="@color/main_blue"
+                    android:textColor="@color/navy"
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
