--- a/ChattingApp/app/src/main/res/layout/detail_receive_msg.xml
+++ b/ChattingApp/app/src/main/res/layout/detail_receive_msg.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,51 +37,51 @@
             app:layout_constraintTop_toBottomOf="@+id/text_gchat_date_left"
             tools:ignore="MissingConstraints" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_gchat_message_other"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_gchat_message_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="0dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintTop_toBottomOf="@+id/text_gchat_user_other"
+            tools:ignore="MissingConstraints">
+
+            <LinearLayout
+                android:id="@+id/layout_gchat_container_other"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="#eef1f6"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="false"
-                app:cardUseCompatPadding="true"
-                app:layout_constraintTop_toBottomOf="@+id/text_gchat_user_other"
-                tools:ignore="MissingConstraints">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/layout_gchat_container_other"
+                <TextView
+                    android:id="@+id/text_gchat_message_other"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/text_gchat_message_other"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:maxWidth="260dp"
-                        android:paddingLeft="12dp"
-                        android:paddingTop="8dp"
-                        android:paddingRight="12dp"
-                        android:text="반갑습니다! 반갑습니다! 반갑습니다! 반갑습니다! 반갑습니다!"
-                        android:textColor="#000000"
-                        android:textSize="11sp" />
+                    android:layout_marginBottom="8dp"
+                    android:maxWidth="260dp"
+                    android:paddingLeft="12dp"
+                    android:paddingTop="8dp"
+                    android:paddingRight="12dp"
+                    android:text="반갑습니다! 반갑습니다! 반갑습니다! 반갑습니다! 반갑습니다!"
+                    android:textColor="#000000"
+                    android:textSize="11sp" />
 
 
-                </LinearLayout>
+            </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
-            <TextView
-                android:id="@+id/text_gchat_timestamp_other"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="오후 1:08"
-                android:textColor="#C0C0C0"
-                android:textSize="10sp"
-                app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_other"
-                app:layout_constraintStart_toEndOf="@+id/card_gchat_message_other" />
+        <TextView
+            android:id="@+id/text_gchat_timestamp_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="오후 1:08"
+            android:textColor="#C0C0C0"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_other"
+            app:layout_constraintStart_toEndOf="@+id/card_gchat_message_other" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
