--- a/Web/src/main/resources/templates/corporation/corp_new.html
+++ b/Web/src/main/resources/templates/corporation/corp_new.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- 신규등록 form-->
-    <form action="corp_info.html" th:action method="post" name="" class="reg_form" onsubmit="return corpNewCheck(this)" enctype="multipart/form-data">
+    <form action="corp_info.html" th:action method="post" name="" class="reg_form" onsubmit="return corpNewCheck(this)">
         <div class="form-group row">
             <label for="corp_name" class="col-sm-2 col-form-label reg_label">기업명</label>
             <div class="col-sm-5">
