--- a/ChattingApp/app/src/main/res/layout/item_company.xml
+++ b/ChattingApp/app/src/main/res/layout/item_company.xml
@@ -8,9 +8,8 @@
 
     <ImageView
         android:id="@+id/companyImg"
-        android:layout_width="20dp"
+        android:layout_width="70dp"
         android:layout_height="50dp"
-        android:layout_weight="1"
         android:layout_gravity="center"
         android:src="@drawable/ic_person"
         android:contentDescription="TODO" />
@@ -43,6 +42,7 @@
             android:layout_marginBottom="3dp"
             android:text="company_introduce"
             android:maxLines="1"
+            android:ellipsize="end"
             android:textColor="@color/purple_dark"
             android:textSize="11dp" />
     </LinearLayout>
