--- a/ChattingApp/app/src/main/res/layout/item_company.xml
+++ b/ChattingApp/app/src/main/res/layout/item_company.xml
@@ -11,7 +11,7 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_person"
+        android:src="@drawable/ic_company"
         android:contentDescription="TODO" />
 
     <LinearLayout
