--- a/Web/src/main/resources/templates/menu/header.html
+++ b/Web/src/main/resources/templates/menu/header.html
@@ -1,4 +1,4 @@
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">빠른답변</a>
-    <a class="logout nav-link px-4" th:href="@{/auth/logout}" style="color:white;">Logout</a> <!-- logout 페이지로 변환 -->
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Fast Solution</a>
+    <a class="logout nav-link px-4" th:onclick="|location.href='@{/auth/logout}'|" style="color:white;">Logout</a> <!-- logout 페이지로 변환 -->
 </header>
