modify logo and API

--- a/Web/src/main/resources/templates/corporation/corp_list.html
+++ b/Web/src/main/resources/templates/corporation/corp_list.html
@@ -78,8 +78,7 @@
             </tbody>
         </table>
         <div class="corp_page">
-            <nav th:with="
-                pageNumber = ${pages.pageNumber},
+            <nav th:with="pageNumber = ${pages.pageNumber},
                 startPage = ${pages.startPage},
                 endPage = (${pages.endPage})"
                  aria-label="Page navigation example">
