--- a/Web/src/main/resources/templates/index.html
+++ b/Web/src/main/resources/templates/index.html
@@ -14,11 +14,11 @@
 <body>
 <div class="login">
     <div class="login_left" >
-        <br><br>
-        <img th:src="@{/images/client.svg}" alt="" width="210px">
-        <br><br>
-        <h5><b>Welcome to Fast Response.</b></h5>
-        <h5>This is Fast Response manager page.</h5>
+        <br><br><br>
+        <img th:src="@{/images/logo2.png}" alt="" width="250px">
+        <br><br><br><br>
+        <h5><b>Welcome to CoChat.</b></h5>
+        <h5>This is CoChat manager page.</h5>
     </div>
     <div class="login_right">
         <br><br>
