client-counselor matching

--- a/Web/src/main/resources/templates/chat/chat_room.html
+++ b/Web/src/main/resources/templates/chat/chat_room.html
@@ -42,7 +42,7 @@
         <h5 class="mx-3 my-3 flex-fill">
             <div th:text="${info.name}">허현진</div>
         </h5>
-        <button onclick="window.close()" class="answer_btn mx-2">
+        <button onclick="decreasingMatching()" class="answer_btn mx-2">
             답변완료
         </button>
     </div>
